--- a/index.html
+++ b/index.html
@@ -4,12 +4,93 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/imgs/logos/monki.png"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <title>MonkeyMusic | Home</title>
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
 </head>
-<body>
+<body class="bg-main-white">
+
+    <!-- header start -->
+
+    <div class="container-fluid text-center bg-main-yellow text-white p-1 ">
+        <div class="row">
+            <div class="col">Envío gratis por todo diciembre en compras sobre $30.000 !</div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-main-black p-3">
+        <h1><a class="navbar-brand text-center text-white " href="index.html">MONKEY MUSIC</a></h1>
+    </div>
+
+    <!-- header end -->
+
+    <!-- Nav start -->
+
+    <nav class="navbar navbar-expand-lg bg-main-white " >
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+    
+          <div class="collapse navbar-collapse justify-content-md-center font-size-20 p-1" id="navbarsExample08">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">Nosotros</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="product.html" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Vynilos</a></li>
+                  <li><a class="dropdown-item" href="#">C'DS action</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
+    <!-- nav end -->
+
+    <!-- carrousel start -->
+
+    <div class="container">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="4000">
+                    <img src="assets/imgs/banners/news-banner.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="assets/imgs/banners/delivery-banner.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="assets/imgs/banners/info-banner.jpg" class="d-block w-100">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <!-- carrousel end -->
 
 
-    <script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
