MonkeyMusic-v3 Primera versión

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,60 @@
 
   <!-- nav end -->
 
+  <div class="container text-center">
+    <h1 class="display-5 text-black">CONTACTO</h1>
+  </div>
+
+  <div class="card-body">
+    <div class="container">
+        <form>
+          <div class="row">
+            <div class="col-md-8 offset-md-2 p-3">
+              <div class="form-group">
+                <label class="p-1">Nombres:</label>
+                <input type="text" class="form-control" placeholder="Pirmer y segundo nombre">
+              </div>
+            </div>
+            <!--  col-md-6   -->
+            <div class="col-md-8 offset-md-2 p-3">
+              <div class="form-group">
+                <label class="p-1">Apellidos:</label>
+                <input type="text" class="form-control" placeholder="Apellido paterno y materno">
+              </div>
+            </div>
+            <!--  col-md-6   -->
+          </div>
+          <div class="row">
+            <div class="col-md-8 offset-md-2 p-3">
+              <div class="form-group">
+                <label class="p-1">Email:</label>
+                <input class="form-control" placeholder="Calle y número">
+              </div>
+            </div>
+            <!--  col-md-6   -->
+            <div class="col-md-8 offset-md-2 p-3">
+              <div class="form-group">
+                <label class="p-1">Asunto:</label>
+                <input type="tel"class="form-control" placeholder="Motivo de su mensaje">
+              </div>
+            </div>
+
+            <div class="col-md-8 offset-md-2 p-3">
+              <div class="form-group">
+                <label class="p-1">Comentario:</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            </div>
+            <!--  col-md-6   -->
+          </div>
+        <div class="container p-2"><button type="submit" class="btn btn-warning col-md-2 offset-md-2">Agregar</button></div>
+        </form>
+      </div>
+</div>
+
+
+</div>
+
   <div class="container">
     <hr class="featurette-divider">
   </div>
