--- a/cds-product.html
+++ b/cds-product.html
@@ -74,6 +74,173 @@
 
   <!-- nav end -->
 
+  <div class="container-fluid">
+    <div class="position-relative p-3 p-md-5 m-md-3 text-center bg-img-cd">
+      <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-5 fw-normal">CDS DISPONIBLES</h1>
+      </div>
+    </div>
+  </div>
+
+  <!-- album card -->
+
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-3 g-4 m-5">
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/imgs/albums/bob-marley-uprising.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title"> <strong>UPRISING</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> BOB MARLEY</p>
+            <p class="card-text font-size-15"> <strong>AÑO:</strong> 1988</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+
+          </div>
+          <div class="card-footer">
+            <div class="d-grid gap-2">
+              <button class="btn btn-warning" type="button">VER MÁS</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/imgs/albums/virus-locura.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title"> <strong>LOCURA</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> VIRUS</p>
+            <p class="card-text font-size-15"> <strong>AÑO:</strong> 1998</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+
+          </div>
+          <div class="card-footer">
+            <div class="d-grid gap-2">
+              <button class="btn btn-warning" type="button">VER MÁS</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/imgs/albums/kiss-dynasty.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title"> <strong>DYNASTY</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
+            <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+
+          </div>
+          <div class="card-footer">
+            <div class="d-grid gap-2">
+              <button class="btn btn-warning" type="button">VER MÁS</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/imgs/albums/metallica-ride-the-lightning.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title font-size-30"> <strong>RIDE THE LIGHTNING</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
+            <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+
+          </div>
+          <div class="card-footer">
+            <div class="d-grid gap-2">
+              <button class="btn btn-warning" type="button">VER MÁS</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/imgs/albums/31-minutos-hits.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title"> <strong>31 MINUTOS HITS</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> 31 MINUTOS</p>
+            <p class="card-text font-size-15"> <strong>AÑO:</strong> 2006</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+
+          </div>
+          <div class="card-footer">
+            <div class="d-grid gap-2">
+              <button class="btn btn-warning" type="button">VER MÁS</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/imgs/albums/exodus-bonded-by-blood.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h1 class="card-title"> <strong>BONDED BY BLOOD</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> EXODUS</p>
+            <p class="card-text font-size-15"> <strong>AÑO:</strong> 1999</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+
+          </div>
+          <div class="card-footer">
+            <div class="d-grid gap-2">
+              <button class="btn btn-warning" type="button">VER MÁS</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- end album card -->
+
+    </div>
+  </div>
+
+  <!-- pagination -->
+
+  <nav aria-label="Page navigation example" class="p-3">
+    <ul class="pagination justify-content-center">
+      <li class="page-item">
+        <a class="page-link text-black" href="#" tabindex="-1">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+          </svg>
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link text-black" href="#">1</a></li>
+      <li class="page-item"><a class="page-link text-black" href="#">2</a></li>
+      <li class="page-item"><a class="page-link text-black" href="#">3</a></li>
+      <li class="page-item"><a class="page-link text-black" href="#">4</a></li>
+      <li class="page-item"><a class="page-link text-black" href="#">5</a></li>
+      <li class="page-item"><a class="page-link text-black" href="#">6</a></li>
+      <li class="page-item"><a class="page-link text-black" href="#">7</a></li>
+      <li class="page-item"><a class="page-link text-black" href="#">8</a></li>
+      <li class="page-item">
+        <a class="page-link text-black" href="#">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <!-- end pagination -->
+
+
   <div class="container">
     <hr class="featurette-divider">
   </div>
