--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="4000">
-          <img src="assets/imgs/banners/news-banner.jpg" class="d-block w-100">
+          <img src="assets/imgs/banners/news-banner.JPEG" class="d-block w-100">
         </div>
         <div class="carousel-item" data-bs-interval="4000">
           <img src="assets/imgs/banners/delivery-banner.jpg" class="d-block w-100">
@@ -146,12 +146,12 @@
   <div class="container my-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-        <h1 class="display-3 fw-bold lh-1">Nos importa tu opinión!</h1>
+        <h1 class="display-6 fw-bold lh-1">Lo que tengas que decir, nos importa!</h1>
         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque rem blanditiis libero
           temporibus culpa hic doloribus quia nisi, quos fugit dolores dolore dolorum illo eum itaque non omnis aperiam
           velit.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-          <button type="button" class="btn btn-warning btn-lg px-4 me-md-2 fw-bold">CONTACTO</button>
+          <button type="button" class="btn btn-warning btn-lg px-4 me-md-2 fw-bold">CONTACTANOS</button>
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
