--- a/vynil-product.html
+++ b/vynil-product.html
@@ -73,6 +73,13 @@
   </nav>
 
   <!-- nav end -->
+  <div class="container-fluid">
+  <div class="position-relative p-3 p-md-5 m-md-3 text-center bg-img">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+      <h1 class="display-5 fw-normal">VYNILOS DISPONIBLES</h1>
+    </div>
+  </div>
+</div>
 
   <!-- album card -->
 
@@ -80,9 +87,9 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 m-5">
       <div class="col">
         <div class="card h-100">
-          <img src="assets/imgs/albums/kiss-dynasty.jpeg" class="card-img-top" alt="...">
+          <img src="assets/imgs/albums/the-rolling-stones-flowers.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title"> <strong>DYNASTY</strong></h1>
+            <h1 class="card-title"> <strong>FLOWERS</strong></h1>
             <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
             <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
             <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
@@ -99,12 +106,12 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="assets/imgs/albums/kiss-dynasty.jpeg" class="card-img-top" alt="...">
+          <img src="assets/imgs/albums/queen-the-game.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title"> <strong>DYNASTY</strong></h1>
-            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
+            <h1 class="card-title"> <strong>THE GAME</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> QUEEN</p>
             <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
-            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 19.990</p>
 
           </div>
           <div class="card-footer">
@@ -118,12 +125,12 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="assets/imgs/albums/kiss-dynasty.jpeg" class="card-img-top" alt="...">
+          <img src="assets/imgs/albums/motorhead-expanded.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title"> <strong>DYNASTY</strong></h1>
-            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
-            <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
-            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+            <h1 class="card-title"> <strong>EXPANDED</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> MOTORHEAD</p>
+            <p class="card-text font-size-15"> <strong>AÑO:</strong> 1988</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 19.990</p>
 
           </div>
           <div class="card-footer">
@@ -137,12 +144,12 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="assets/imgs/albums/kiss-dynasty.jpeg" class="card-img-top" alt="...">
+          <img src="assets/imgs/albums/michael-jackson-thriller.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title"> <strong>DYNASTY</strong></h1>
-            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
+            <h1 class="card-title"> <strong>THRILLER</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> MICHAEL JACKSON</p>
             <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
-            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 19.990</p>
 
           </div>
           <div class="card-footer">
@@ -156,12 +163,12 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="assets/imgs/albums/kiss-dynasty.jpeg" class="card-img-top" alt="...">
+          <img src="assets/imgs/albums/the-smiths-hatful-of.hollow.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title"> <strong>DYNASTY</strong></h1>
-            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
+            <h1 class="card-title"> <strong>HATFUL OF HOLLOW</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> THE SMITHS</p>
             <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
-            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 19.990</p>
 
           </div>
           <div class="card-footer">
@@ -175,12 +182,12 @@
 
       <div class="col">
         <div class="card h-100">
-          <img src="assets/imgs/albums/kiss-dynasty.jpeg" class="card-img-top" alt="...">
+          <img src="assets/imgs/albums/los-tres-fome.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h1 class="card-title"> <strong>DYNASTY</strong></h1>
-            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
-            <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
-            <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
+            <h1 class="card-title"> <strong>FOME</strong></h1>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> LOS TRES</p>
+            <p class="card-text font-size-15"> <strong>AÑO:</strong> 2001</p>
+            <p class="card-text font-size-15"> <strong>VALOR:</strong> 19.990</p>
 
           </div>
           <div class="card-footer">
