adding new-branch

--- a/index.html
+++ b/index.html
@@ -160,6 +160,42 @@
     </div>
   </div>
 
+  <div class="container text-center p-5">
+    <h1 class="display-5 text-black">PRODUCTOS DESTACADOS</h1>
+  </div>
+
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+
+      <div class="col">
+        <div class="card">
+          <img src="assets/imgs/albums/kiss-love-gun.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3 class="card-title text-center"><strong>CD | LOVE GUN</strong></h3>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card">
+          <img src="assets/imgs/albums/michael-jackson-thriller.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3 class="card-title text-center"><strong>VYNIL | THRILLER</strong></h3>
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card">
+          <img src="assets/imgs/albums/bob-marley-uprising.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h3 class="card-title text-center"><strong>CD | UPRISING </strong></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
     <hr class="featurette-divider">
   </div>
