--- a/vynil-product.html
+++ b/vynil-product.html
@@ -34,7 +34,6 @@
         <img class="w-25 float-end" src="assets/imgs/logos/monki-min.png">
       </div>
     </div>
-
   </div>
 
   <!-- header end -->
@@ -90,7 +89,7 @@
           <img src="assets/imgs/albums/the-rolling-stones-flowers.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h1 class="card-title"> <strong>FLOWERS</strong></h1>
-            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> KISS</p>
+            <p class="card-text font-size-15"> <strong>ARTISTA:</strong> THE ROLLING STONES</p>
             <p class="card-text font-size-15"> <strong>AÑO:</strong> 1996</p>
             <p class="card-text font-size-15"> <strong>VALOR:</strong> 9.990</p>
 
