--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
             <div class="col-md-8 offset-md-2 p-3">
               <div class="form-group">
                 <label class="p-1">Email:</label>
-                <input class="form-control" placeholder="Calle y número">
+                <input class="form-control" placeholder="Su correo">
               </div>
             </div>
             <!--  col-md-6   -->
